--- a/Tradeterms/Base.lproj/Main.storyboard
+++ b/Tradeterms/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Vq-fa-X3d">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7Vq-fa-X3d">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,13 +19,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="150" translatesAutoresizingMaskIntoConstraints="NO" id="14f-uY-rda">
-                                <rect key="frame" x="20" y="142" width="335" height="255"/>
+                                <rect key="frame" x="20" y="142" width="335" height="312"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tradeterms" translatesAutoresizingMaskIntoConstraints="NO" id="1lK-Ps-WXx">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="57"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="114"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intercambia bienes con usuarios cerca y lejos de ti" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZO-ey-1ka">
-                                        <rect key="frame" x="0.0" y="207" width="335" height="48"/>
+                                        <rect key="frame" x="0.0" y="264" width="335" height="48"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -34,7 +34,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="xsj-4y-VfJ">
-                                <rect key="frame" x="30" y="547" width="315" height="98"/>
+                                <rect key="frame" x="30" y="604" width="315" height="98"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5P-Oe-b1K">
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="34"/>
@@ -276,22 +276,6 @@
             </objects>
             <point key="canvasLocation" x="5600.8000000000002" y="1493.7031484257873"/>
         </scene>
-        <!--Deseos-->
-        <scene sceneID="puK-UP-Ugk">
-            <objects>
-                <viewController id="UZf-Xm-IW3" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="WHE-O6-0SL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="3xO-6Z-e5J"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Deseos" id="AgA-Ic-OC2"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Knk-fz-esJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5600.8000000000002" y="-609.44527736131943"/>
-        </scene>
         <!--Articulo-->
         <scene sceneID="v4v-uM-fT4">
             <objects>
@@ -376,12 +360,12 @@
                     <navigationItem key="navigationItem" title="Añadir Artículo" id="xHE-Ht-AN5">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="d7c-UR-npy">
                             <connections>
-                                <action selector="cancel:" destination="8LX-p0-XF7" id="Brb-5o-HYN"/>
+                                <action selector="cancel:" destination="8LX-p0-XF7" id="hvU-lK-rCQ"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="nRH-eQ-MG1">
                             <connections>
-                                <segue destination="rSd-CP-p2Q" kind="unwind" unwindAction="unwindToArticuloListWithSender:" id="t2k-JY-zNh"/>
+                                <segue destination="rSd-CP-p2Q" kind="unwind" unwindAction="unwindToArticuloListWithSender:" id="aok-tl-KBl"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -402,7 +386,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="6518" y="-1308"/>
+            <point key="canvasLocation" x="7456.8000000000002" y="-1308.3958020989505"/>
         </scene>
         <!--PaginaPrincipal-->
         <scene sceneID="0rd-Y3-dXU">
@@ -620,7 +604,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="UZf-Xm-IW3" kind="relationship" relationship="rootViewController" id="TPY-y4-5j9"/>
+                        <segue destination="gYd-lH-BZf" kind="relationship" relationship="rootViewController" id="zhP-rO-K3w"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tA3-C9-c6W" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -630,7 +614,6 @@
         <!--Pertenencias-->
         <scene sceneID="qJ2-Jt-l29">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tpp-rv-580" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EJc-mf-r9E" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Pertenencias" image="Icon-Small-pertenencias" id="U98-Gb-r6k"/>
                     <toolbarItems/>
@@ -643,6 +626,7 @@
                         <segue destination="lCY-NN-v32" kind="relationship" relationship="rootViewController" id="DCy-Mg-f6x"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tpp-rv-580" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4661.6000000000004" y="-1308.3958020989505"/>
         </scene>
@@ -683,6 +667,7 @@
                                     <outlet property="nameLabel" destination="as7-pU-x5C" id="bBD-d4-y1c"/>
                                     <outlet property="photoImageView" destination="KPu-cg-NyO" id="ZsO-fe-fil"/>
                                     <outlet property="ratingControl" destination="Mgf-Yy-KCK" id="88D-P6-sUo"/>
+                                    <segue destination="8LX-p0-XF7" kind="show" identifier="ShowDetail" id="arq-zi-XPg"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -695,27 +680,100 @@
                     <navigationItem key="navigationItem" title="Mis Pertenecias" id="LzE-Y3-7rK">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="5Rt-56-pcu">
                             <connections>
-                                <segue destination="8LX-p0-XF7" kind="show" identifier="AddItem" id="qLl-da-yOA"/>
+                                <segue destination="6Wg-Xp-Gxc" kind="show" identifier="AddItem" id="qLl-da-yOA"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Net-pX-k7s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5542" y="-1308"/>
+            <point key="canvasLocation" x="5601" y="-1308"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="pRS-dr-qQa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Wg-Xp-Gxc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xRL-4i-lVX">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8LX-p0-XF7" kind="relationship" relationship="rootViewController" id="syP-06-uK6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3vB-DG-RDa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6559" y="-1759"/>
+        </scene>
+        <!--Deseos-->
+        <scene sceneID="uSt-DQ-nDK">
+            <objects>
+                <tableViewController restorationIdentifier="ArticuloDeseosTableViewController" storyboardIdentifier="DeseosTableView" title="Deseos" id="gYd-lH-BZf" customClass="ArticuloDeseosTableViewController" customModule="Tradeterms" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="5Hk-FW-Pz6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ArticuloTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticuloTableViewCell" rowHeight="100" id="AOa-cd-ZNo" customClass="ArticuloTableViewCell" customModule="Tradeterms" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AOa-cd-ZNo" id="mHb-O8-fYu">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="defaultphoto" translatesAutoresizingMaskIntoConstraints="NO" id="M3s-b6-NQ0">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ajx-Bz-iDY">
+                                            <rect key="frame" x="108" y="11" width="251" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="x3Q-ar-JhQ" customClass="RatingControl" customModule="Tradeterms" customModuleProvider="target">
+                                            <rect key="frame" x="108" y="45" width="252" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </stackView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="ajx-Bz-iDY" id="lVn-J0-1qu"/>
+                                    <outlet property="photoImageView" destination="M3s-b6-NQ0" id="gfo-og-4ca"/>
+                                    <outlet property="ratingControl" destination="x3Q-ar-JhQ" id="n3o-ZQ-9b4"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="gYd-lH-BZf" id="XTI-9e-S8N"/>
+                            <outlet property="delegate" destination="gYd-lH-BZf" id="xQ0-2P-fSa"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Deseos" image="Icon-small-deseos" id="Unn-JB-INK"/>
+                    <navigationItem key="navigationItem" title="Mis Deseos" id="P99-Lh-NC2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ze4-r0-GIz"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TuL-GY-rVN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5601" y="-609"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Icon-Small-40" width="30" height="30"/>
-        <image name="Icon-Small-buscar" width="30" height="30"/>
-        <image name="Icon-Small-perfil" width="30" height="30"/>
-        <image name="Icon-Small-pertenencias" width="30" height="30"/>
-        <image name="Icon-small-deseos" width="30" height="30"/>
-        <image name="defaultphoto" width="1080" height="1080"/>
-        <image name="tradeterms" width="222" height="57"/>
+        <image name="Icon-Small-40" width="40" height="40"/>
+        <image name="Icon-Small-buscar" width="40" height="40"/>
+        <image name="Icon-Small-perfil" width="40" height="40"/>
+        <image name="Icon-Small-pertenencias" width="40" height="40"/>
+        <image name="Icon-small-deseos" width="40" height="40"/>
+        <image name="defaultphoto" width="540" height="540"/>
+        <image name="tradeterms" width="444" height="114"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="59O-Xi-Yx6"/>
+        <segue reference="arq-zi-XPg"/>
         <segue reference="KUL-tz-lDg"/>
     </inferredMetricsTieBreakers>
 </document>
