--- a/Tradeterms/Base.lproj/Main.storyboard
+++ b/Tradeterms/Base.lproj/Main.storyboard
@@ -761,6 +761,118 @@
             </objects>
             <point key="canvasLocation" x="5601" y="-609"/>
         </scene>
+        <!--ArticuloDeseos-->
+        <scene sceneID="bsQ-6u-luw">
+            <objects>
+                <viewController storyboardIdentifier="ArtDeseosViewController" title="ArticuloDeseos" id="RjL-H0-yR0" customClass="ArtDeseosViewController" customModule="Tradeterms" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2nv-WD-HOn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="btA-Q9-Rzv">
+                                <rect key="frame" x="20" y="28" width="335" height="395"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultphoto" translatesAutoresizingMaskIntoConstraints="NO" id="R93-Nl-22m">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="335"/>
+                                        <accessibility key="accessibilityConfiguration">
+                                            <accessibilityTraits key="traits" image="YES" allowsDirectInteraction="YES"/>
+                                        </accessibility>
+                                        <gestureRecognizers/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="R93-Nl-22m" secondAttribute="height" multiplier="1:1" id="aOs-O2-uw9"/>
+                                        </constraints>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="ZTw-pS-X3G" appends="YES" id="mw3-uX-G6R"/>
+                                        </connections>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Nombre del Artículo" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Pc-Dm-lea">
+                                        <rect key="frame" x="0.0" y="335" width="335" height="30"/>
+                                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Descripción del Artículo" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hjz-pG-8Hf">
+                                        <rect key="frame" x="0.0" y="365" width="335" height="30"/>
+                                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fda-mi-0h4">
+                                <rect key="frame" x="20" y="431" width="252" height="85"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estado del artículo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IF2-ZK-XLr">
+                                        <rect key="frame" x="0.0" y="0.0" width="252" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="io5-bG-GaY" userLabel="Rating" customClass="RatingControl" customModule="Tradeterms" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="20.5" width="252" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="io5-bG-GaY" secondAttribute="height" multiplier="63:11" id="4Mx-wA-g8g"/>
+                                        </constraints>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zona" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofc-gl-2RW">
+                                        <rect key="frame" x="0.0" y="64.5" width="252" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Escriba su Zona" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VmI-BY-tfe">
+                                <rect key="frame" x="20" y="524" width="335" height="30"/>
+                                <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VmI-BY-tfe" firstAttribute="top" secondItem="Fda-mi-0h4" secondAttribute="bottom" constant="8" id="2Gt-6A-vxA"/>
+                            <constraint firstItem="Fda-mi-0h4" firstAttribute="leading" secondItem="YI9-PS-fLb" secondAttribute="leading" constant="20" id="BOi-yv-3mx"/>
+                            <constraint firstItem="Fda-mi-0h4" firstAttribute="top" secondItem="btA-Q9-Rzv" secondAttribute="bottom" constant="8" id="CDv-JM-8xo"/>
+                            <constraint firstItem="btA-Q9-Rzv" firstAttribute="leading" secondItem="YI9-PS-fLb" secondAttribute="leading" constant="20" id="D9O-BJ-942"/>
+                            <constraint firstItem="YI9-PS-fLb" firstAttribute="trailing" secondItem="VmI-BY-tfe" secondAttribute="trailing" constant="20" id="Nat-Pj-cq3"/>
+                            <constraint firstAttribute="trailing" secondItem="btA-Q9-Rzv" secondAttribute="trailing" constant="20" id="VD5-AG-Fe3"/>
+                            <constraint firstItem="VmI-BY-tfe" firstAttribute="leading" secondItem="YI9-PS-fLb" secondAttribute="leading" constant="20" id="evd-Xm-jAa"/>
+                            <constraint firstItem="btA-Q9-Rzv" firstAttribute="top" secondItem="YI9-PS-fLb" secondAttribute="top" constant="8" id="tSf-iz-dXE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="YI9-PS-fLb"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Añadir Artículo" id="uJw-Va-4gO">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dLs-DQ-eLF">
+                            <connections>
+                                <action selector="cancel:" destination="RjL-H0-yR0" id="rfh-FQ-87z"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="8SG-GP-qse">
+                            <connections>
+                                <segue destination="kfZ-IF-mS4" kind="unwind" unwindAction="unwindToArticuloListWithSender:" id="fEH-Qo-YT6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="descriptionTextField" destination="Hjz-pG-8Hf" id="pyo-EY-3rB"/>
+                        <outlet property="nameTextField" destination="6Pc-Dm-lea" id="eMV-Vo-uS4"/>
+                        <outlet property="photoImageView" destination="R93-Nl-22m" id="Ze5-CL-CGs"/>
+                        <outlet property="ratingControl" destination="io5-bG-GaY" id="guK-ot-cv7"/>
+                        <outlet property="saveButton" destination="8SG-GP-qse" id="S60-8e-GvJ"/>
+                        <outlet property="zoneTextField" destination="VmI-BY-tfe" id="8xD-Jl-ZBl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GUC-Hv-Edn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="kfZ-IF-mS4" userLabel="Exit" sceneMemberID="exit"/>
+                <tapGestureRecognizer id="ZTw-pS-X3G">
+                    <connections>
+                        <action selector="selectImageFromPhotoLibrary:" destination="RjL-H0-yR0" id="Rgz-V6-RgJ"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="7457" y="-609"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Icon-Small-40" width="40" height="40"/>
