--- a/Tradeterms/Base.lproj/Main.storyboard
+++ b/Tradeterms/Base.lproj/Main.storyboard
@@ -744,6 +744,7 @@
                                     <outlet property="nameLabel" destination="ajx-Bz-iDY" id="6yK-Pa-cbk"/>
                                     <outlet property="photoImageView" destination="M3s-b6-NQ0" id="MXE-eP-bys"/>
                                     <outlet property="ratingControl" destination="x3Q-ar-JhQ" id="bqP-LT-dkP"/>
+                                    <segue destination="RjL-H0-yR0" kind="show" identifier="ShowDetailDeseos" id="gEN-jc-dCq"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -804,22 +805,22 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fda-mi-0h4">
-                                <rect key="frame" x="20" y="475" width="252" height="85"/>
+                                <rect key="frame" x="20" y="475" width="286.5" height="91"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estado del artículo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IF2-ZK-XLr">
-                                        <rect key="frame" x="0.0" y="0.0" width="252" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="286.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="io5-bG-GaY" userLabel="Rating" customClass="RatingControl" customModule="Tradeterms" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="20.5" width="252" height="44"/>
+                                        <rect key="frame" x="0.0" y="20.5" width="286.5" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="io5-bG-GaY" secondAttribute="height" multiplier="63:11" id="4Mx-wA-g8g"/>
                                         </constraints>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zona" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofc-gl-2RW">
-                                        <rect key="frame" x="0.0" y="64.5" width="252" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="70.5" width="286.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -827,7 +828,7 @@
                                 </subviews>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Escriba su Zona" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VmI-BY-tfe">
-                                <rect key="frame" x="20" y="568" width="335" height="30"/>
+                                <rect key="frame" x="20" y="574" width="335" height="30"/>
                                 <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -849,10 +850,14 @@
                     <navigationItem key="navigationItem" title="Añadir Artículo Deseos" id="uJw-Va-4gO">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dLs-DQ-eLF">
                             <connections>
-                                <action selector="cancel:" destination="RjL-H0-yR0" id="rfh-FQ-87z"/>
+                                <action selector="cancel:" destination="RjL-H0-yR0" id="rPX-fs-jxQ"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="8SG-GP-qse"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="8SG-GP-qse">
+                            <connections>
+                                <segue destination="09Y-LQ-fcj" kind="unwind" unwindAction="unwindToArticuloDeseosListWithSender:" id="Tg3-e5-kgn"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="descriptionTextField" destination="Hjz-pG-8Hf" id="pyo-EY-3rB"/>
@@ -864,6 +869,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GUC-Hv-Edn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="09Y-LQ-fcj" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="ZTw-pS-X3G">
                     <connections>
                         <action selector="selectImageFromPhotoLibrary:" destination="RjL-H0-yR0" id="Rgz-V6-RgJ"/>
@@ -901,6 +907,7 @@
         <image name="tradeterms" width="444" height="114"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="gEN-jc-dCq"/>
         <segue reference="59O-Xi-Yx6"/>
         <segue reference="arq-zi-XPg"/>
         <segue reference="KUL-tz-lDg"/>
